[fix] GetHouses
